Student Registration screen now allows for extensibility via sitecode.jar